<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TingHook Gateway</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="hint_api_key">API Key</string>
    <string name="hint_device_uid">Device UID</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
</resources>
